Issue #2125205 by mducharme: Wetkit Ember has layout issues.

--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -1,4 +1,11 @@
 /* =============================================================================
+   Ember
+   ========================================================================== */
+.views-exposed-form .views-exposed-widget {
+  overflow: hidden;
+}
+
+/* =============================================================================
    Media
    ========================================================================== */
 #media-browser-page-wrapper {
